alignment fixed

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,4 @@
 /* reset */
-
-*,
-/* reset */
 *,
 *::before,
 *::after {
@@ -11,14 +8,23 @@
 html {
     background-color: rgb(220, 220, 220);
     }   
-    
+
 body {
     margin: 0;
     padding: 0;
     font: 100% / 1.5 system-ui, sans-serif;
     display: flex;
     justify-content: center;
+    flex-direction: column; /* Align elements vertically */
+    align-items: center; /* Align elements horizontally */
+    padding-left: 20px;
 
+}
+#histogram {
+    width: 800px;
+    height: 500px;
+    background-color: white; 
+    border-radius: 8px; 
 }
 
 .wrapper {
@@ -55,7 +61,7 @@ body {
 
   #write-up {
     max-width: 800px;
-    margin: 40px auto;
+    margin: 40px 0;
     padding: 20px;
     background-color: white;
     border-radius: 8px;
